# document-pipeline

./: .gitignore  .redocly.yaml  Dockerfile  GO-REWRITE.md  Makefile  PLAN.md  README.md  app.py  backfill_clarify_artifacts.py  docker-compose.yml  export_schema.py  go.mod  go.sum  migrate.py  openapi.json  openapi.yaml  pipeline.db  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
adapters/inbound/: api.py  schemas.py  ui.py  webhook.py
adapters/outbound/: filesystem.py  ollama.py  open_webui.py  paddleocr.py  qdrant.py  sqlite.py  streams.py
api/: README.md
cmd/migrate-runs/: main.go
cmd/migrate-sqlite/: main.go
config/: README.md  pipeline.yaml
core/: README.md
core/domain/: document.py  job.py  pipeline.py
core/services/: ingest.py  review.py  worker.py
db/: migrations.go
db/migrations/: 001_create_documents.down.sql  001_create_documents.up.sql  002_create_jobs.down.sql  002_create_jobs.up.sql  003_create_artifacts.down.sql  003_create_artifacts.up.sql  004_create_stage_events.down.sql  004_create_stage_events.up.sql  005_create_contexts.up.sql  006_create_chat_sessions.up.sql  007_create_chat_messages.down.sql  007_create_chat_messages.up.sql  008_create_key_value.up.sql  009_add_series_to_documents.down.sql  010_index_queue.down.sql  (+7 more)
frontend/: index.html  openapi-ts.config.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
prompts/: clarify.txt  classify.txt  ocr.txt  summarize.txt  user_context.txt
scripts/: reembed.sh
server/: main.go
store/: README.md
ui/: README.md
(+177 files in other folders)
