[project]
name = "document-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
    "aiosqlite==0.20.0",
    "pyyaml==6.0.2",
    "jinja2==3.1.5",
]

[dependency-groups]
dev = [
    "datamodel-code-generator[http]==0.27.3",
]
